plugin/testdata/fail.star
def main(ctx):
    fn1()

def fn1():
    fn2()

def fn2():
    fail("fail-message")
